# cmake_scripts

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: README.md  pre-commit.yml  release.yml
frameworks/Quantum_Leaps/: quantum_leaps.cmake
frameworks/arm_cmsis_dsp/: CMakeLists.txt  cmsis_dspConfig.cmake
frameworks/arm_cmsis_dsp/helper/: BasicMathFunctions.cmake  BayesFunctions.cmake  CommonTables.cmake  ComplexMathFunctions.cmake  FastMathFunctions.cmake  InterpolationFunctions.cmake  MatrixFunctions.cmake  QuaternionMathFunctions.cmake  StatisticsFunctions.cmake  WindowFunctions.cmake
frameworks/arm_cmsis_v5/: arm_cmsis_v5.cmake  cmsis_v5.md
frameworks/canopennode/: CMakeLists.cmake  canopennode.cmake
frameworks/cmock/: CMakeLists.cmake  cmock.cmake
frameworks/cmsis-dsp/: cmsis-dsp.cmake  cmsis-dsp.cmsis.cmake  cmsis-dsp.makeavailable.cmake  cmsis-dspConfig.cmake
frameworks/cmsis_dsp/: arm_cmsis_dsp.cmake  cmsis_dsp.CMakeLists.cmake  cmsis_dsp.cmake
frameworks/cmsis_dsp/helper/: ControllerFunctions.cmake  DistanceFunctions.cmake  FilteringFunctions.cmake  SVMFunctions.cmake  SupportFunctions.cmake  TransformFunctions.cmake
frameworks/cmsis_v5/: CMakeLists.cmsis_v5.cmake  cmsis_CMType.cmake  cmsis_v5.CMakeLists.cmake  cmsis_v5.cmake  cmsis_v5.makeavailable.cmake  cmsis_v5.md  cmsis_v5Config.cmake
frameworks/cmsis_v6/: cmsis_v6.CMakeLists.cmake  cmsis_v6.cmake  cmsis_v6.md  cmsis_v6Config.cmake
frameworks/quantum_leaps/: CMakeLists.cmake  quantum_leaps.cmake
frameworks/segger_rtt/: CMakeLists.cmake  segger_rtt.cmake  segger_rtt.lib.cmake  segger_rtt.makeavailable.cmake
frameworks/unity/: unity.cmake  unity.makeavailable.cmake
frameworks/unity/host/: host.cmake  unity_host.cmake
silicon/STMicroelectronics/: stm32cubexx.CMakeLists.cmake  stm32cubexx.cmake  stm32cubexx.cmsis.cmake  stm32cubexx.config.cmake  stm32cubexx.config.in  stm32cubexx.devices.cmake  stm32cubexx.gpio-struct.cmake  stm32cubexx.md  stm32cubexx.precompiled.cmake  stm32cubexx.vectors.cmake
silicon/STMicroelectronics/vectors/inc/: vectors.h  vectors_ac6.h  vectors_gcc.h  vectors_llvm.h
silicon/STMicroelectronics/vectors/src/: vectors_template.c.in
silicon/st/: CMakeLists.cubemx.cmake  cubemx.CMakeLists.cmake  cubemx.cmake  cubemx.cmsis.cmake  cubemx.md  cubemx.precompiled.cmake  stm32cubemx.CMakeLists.cmake  stm32cubemx.cmake  stm32cubemx.cmsis.cmake  stm32cubemx.config.cmake  stm32cubexx.CMakeLists.cmake  stm32cubexx.cmake  stm32cubexx.cmsis.cmake  stm32cubexx.devices.cmake  stm32cubexx.lib.cmake  stm32cubexx.makeavailable.cmake  stm32cubexx.md  stm32cubexx.precompiled.cmake  stm32cubexx.types.cmake  stm32devices.cmake  stm32types.cmake
toolchains/: arm-none-eabi-gcc.cmake  arm_none_eabi_gcc.cmake  armclang.cmake  armclang_community.cmake  atfe_clang.cmake  llvm-clang-arm.cmake  llvm_clang_arm.cmake  llvm_clang_gcc.cmake  toolchains.md
toolchains/common/: .gitignore  ac6.cmake  checkcompilerpath.cmake  clang.cmake  gcc.cmake  generate_atfe_config.cmake  toolchainsHowTo.md
toolchains/common/.llvm-configs/: aarch64_semihost.cfg  armv4t.cfg  armv5te_semihost.cfg  armv6m_soft_nofp_semihost.cfg  armv7em_hard_fpv5_d16.cfg  armv7em_hard_fpv5_d16_semihost.cfg  armv7em_soft_nofp.cfg  armv7em_soft_nofp_semihost.cfg  armv7m_soft_nofp.cfg  armv7m_soft_nofp_semihost.cfg  armv8.1m.main_hard_fp.cfg  armv8.1m.main_hard_fp_semihost.cfg  armv8m.main_hard_fp.cfg  armv8m.main_hard_fp_semihost.cfg  armv8m.main_soft_nofp_semihost.cfg  sohal.cfg
toolchains/common/.llvm_configs/: aarch64.cfg  armv4t_semihost.cfg  armv5te.cfg  armv6m_soft_nofp.cfg  armv7em_hard_fpv4_sp_d16.cfg  armv7em_hard_fpv4_sp_d16_semihost.cfg  armv7m_hard_fpv4_sp_d16.cfg  armv8.1m.main_hard_nofp_mve.cfg  armv8.1m.main_hard_nofp_mve_semihost.cfg  armv8.1m.main_soft_nofp_nomve.cfg  armv8.1m.main_soft_nofp_nomve_semihost.cfg  armv8m.main_soft_nofp.cfg
toolchains/cortex/: check_cortex_type.cmake  cm0.cmake  cm4f.cmake  cm7.cmake  cortexTypes.md
utilities/: artifact_archiving.cmake  extract_version.cmake  flasher.cmake  jerase.jlink  jflash.in  srecord.cmake  utils.cmake
